# example_project

./: .flake8  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code_quality.yaml
notebooks/: awstk.ipynb  awstk.py  create_features.ipynb  data_stream.ipynb  deploy_lambda.ipynb  lambda_function.py  listing_lambda_functions.ipynb  schedule_lambda.ipynb  settings.py  stream_features.ipynb  train_model.ipynb
tests/: test_calcs.py
