[tool.poetry]
name = "example-project"
version = "0.1.0"
description = "example deployment machine learning"
authors = ["Alexander Lewzey <a.lewzey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
boto3 = "^1.33.7"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
